--- a/example-app/src/main/res/layout/main.xml
+++ b/example-app/src/main/res/layout/main.xml
@@ -49,6 +49,22 @@
             android:text="custom value" />
     </LinearLayout>
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Revenue value:"/>
+        <EditText
+            android:id="@+id/revenue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            android:text="5" />
+    </LinearLayout>
+
     <Button
         android:id="@+id/event"
         android:layout_width="wrap_content"
