--- a/example-app/src/main/res/layout/main.xml
+++ b/example-app/src/main/res/layout/main.xml
@@ -83,5 +83,11 @@
         android:layout_height="wrap_content"
         android:text="Resume tracking" />
 
+    <Button
+        android:id="@+id/secondaryActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Open another activity" />
+
 
 </LinearLayout>
