--- a/sdk-xmple-app/src/main/res/layout/event_activity.xml
+++ b/sdk-xmple-app/src/main/res/layout/event_activity.xml
@@ -184,6 +184,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Open another activity" />
+        android:text="Fragments Demo" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/billingActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Billing Demo" />
+
 
 </LinearLayout>
